--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_maps_flutter: ^2.1.1
   location: ^4.3.0
   geolocator: ^7.2.0+1
+  google_fonts: ^2.2.0
   
 
 dev_dependencies:
