--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   location: ^4.3.0
   geolocator: ^7.2.0+1
   google_fonts: ^2.2.0
-  
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
