--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^7.2.0+1
   google_fonts: ^2.2.0
   flutter_rating_bar: ^4.0.0
+  mask_text_input_formatter: ^2.1.0
 
 dev_dependencies:
   flutter_test:
